ClearML Colab worker

--- a/RecSys_worker.ipynb
+++ b/RecSys_worker.ipynb
@@ -51,7 +51,7 @@
         "nvidia_smi = product_name = subprocess.check_output(\"nvidia-smi\", shell=True).decode(\"utf-8\")\n",
         "print(nvidia_smi)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,6 +131,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iIGC22Jo3KIM"
+      },
+      "source": [
+        "# Podpięcie dysku"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -152,6 +161,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z3PpyjCo3NEY"
+      },
+      "source": [
+        "# Sprawdzenie regionu w którym pracuje instancja (opcjonalne)"
       ]
     },
     {
